# optilayer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  algorithms.md  readme.md  scratch.cpp
logger/: logger.hpp
mesh/: mesh.cpp  mesh.hpp
optilayer/: optilayer.cpp
options/: options.cpp  options.hpp
stl/: stl.cpp  stl.hpp
visualization/: visualization.hpp
